--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="exhibits.html">Exhibits</a></li>
-          <li><a href="congresses.html">Congresses</a></li>
+          <li><a href="halftone.html">Halftone</a></li>
           <li><a href="sports.html">Sports</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="insights.html">Insights</a></li>
