--- a/photo.html
+++ b/photo.html
@@ -24,9 +24,8 @@
     }
 
     .grid {
-      display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 24px;
+      column-count: 3;
+      column-gap: 24px;
     }
 
     .grid img {
@@ -34,17 +33,20 @@
       height: auto;
       display: block;
       background: #f2f2f2;
+      margin: 0 0 24px;
+      break-inside: avoid;
+      -webkit-column-break-inside: avoid;
     }
 
     @media (max-width: 900px) {
       .grid {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
+        column-count: 2;
       }
     }
 
     @media (max-width: 600px) {
       .grid {
-        grid-template-columns: 1fr;
+        column-count: 1;
       }
     }
   </style>
@@ -52,25 +54,20 @@
 <body>
   <h1>Photo</h1>
   <div class="grid">
-    <img src="assets/optimized/lake/img04-1920.avif" alt="img04" />
-    <img src="assets/optimized/lake/img16-1920.avif" alt="img16" />
-    <img src="assets/optimized/lake/img26-1920.avif" alt="img26" />
-    <img src="assets/optimized/lake/lake-08-1920.avif" alt="lake-08" />
-    <img src="assets/optimized/last_of/img01-2560.avif" alt="img01" />
-    <img src="assets/optimized/last_of/img02-2560.avif" alt="img02" />
-    <img src="assets/optimized/last_of/img03-2560.avif" alt="img03" />
-    <img src="assets/optimized/last_of/img04-2560.avif" alt="img04" />
-    <img src="assets/optimized/last_of/img05-1920.avif" alt="img05" />
-    <img src="assets/optimized/last_of/img06-2560.avif" alt="img06" />
-    <img src="assets/optimized/last_of/img07-2560.avif" alt="img07" />
-    <img src="assets/optimized/last_of/img08-2560.avif" alt="img08" />
-    <img src="assets/optimized/last_of/img09-1440.avif" alt="img09" />
-    <img src="assets/optimized/last_of/img10-2560.avif" alt="img10" />
-    <img src="assets/optimized/last_of/img11-2560.avif" alt="img11" />
-    <img src="assets/optimized/last_of/img12-2560.avif" alt="img12" />
-    <img src="assets/optimized/last_of/img13-1920.avif" alt="img13" />
-    <img src="assets/optimized/last_of/img14-1920.avif" alt="img14" />
-    <img src="assets/optimized/last_of/img15-1920.avif" alt="img15" />
+    <img src="assets/long_art2601_fa25_portfolio/01-the-flood.jpg" alt="The Flood" />
+    <img src="assets/long_art2601_fa25_portfolio/02-what-we-found.jpg" alt="What We Found" />
+    <img src="assets/long_art2601_fa25_portfolio/03-the-comedian-escapes.jpg" alt="The Comedian Escapes" />
+    <img src="assets/long_art2601_fa25_portfolio/04-missed-it.jpg" alt="Missed It" />
+    <img src="assets/long_art2601_fa25_portfolio/05-where-from-here.jpg" alt="Where from Here" />
+    <img src="assets/long_art2601_fa25_portfolio/06-home-is-where-the-heart-is.jpg" alt="Home Is Where the Heart Is" />
+    <img src="assets/long_art2601_fa25_portfolio/07-evergreen.jpg" alt="Evergreen" />
+    <img src="assets/long_art2601_fa25_portfolio/08-you-got-me.jpg" alt="You Got Me" />
+    <img src="assets/long_art2601_fa25_portfolio/09-condition-one.jpg" alt="Condition One" />
+    <img src="assets/long_art2601_fa25_portfolio/10-wheres-the-rest.jpg" alt="Where's the Rest" />
+    <img src="assets/long_art2601_fa25_portfolio/11-unlikely-to-bloom.jpg" alt="Unlikely to Bloom" />
+    <img src="assets/long_art2601_fa25_portfolio/12-more-likely.jpg" alt="More Likely" />
+    <img src="assets/long_art2601_fa25_portfolio/13-nick-fuentes-eat-your-heart-out.jpg" alt="Nick Fuentes Eat Your Heart Out" />
+    <img src="assets/long_art2601_fa25_portfolio/14-into-winter.jpg" alt="Into Winter" />
   </div>
 </body>
 </html>
