--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="page.css" />
 </head>
 <body>
+  <a class="back-link" href="index.html">back</a>
   <h1>About</h1>
 <h2>SDIYBT</h2>
 <p>Ts pmo</p>
