--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="page.css" />
 </head>
 <body>
+  <a class="back-link" href="index.html">back</a>
   <h1>Contact</h1>
 </body>
 </html>
