--- a/halftone.html
+++ b/halftone.html
@@ -23,7 +23,23 @@
       text-align: center;
       color: var(--ink);
       background: var(--paper);
-      padding: 1rem 0 2rem;
+      padding: 4.5rem 0 2rem;
+    }
+
+    .back-link {
+      position: fixed;
+      top: 32px;
+      left: 32px;
+      color: var(--ink);
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 1;
+      z-index: 100;
+    }
+
+    .back-link:hover {
+      opacity: 0.7;
     }
 
     article {
@@ -60,6 +76,7 @@
   </style>
 </head>
 <body>
+  <a class="back-link" href="index.html">back</a>
   <article class="standard">
     <h3>Standard Filtered Halftone</h3>
     <section>
