--- a/photo.html
+++ b/photo.html
@@ -12,7 +12,7 @@
 
     body {
       margin: 0;
-      padding: 32px;
+      padding: 88px 32px 32px;
       font-family: sans-serif;
       background: var(--paper);
       color: var(--ink);
@@ -21,6 +21,22 @@
     h1 {
       margin: 0 0 24px;
       font-size: 48px;
+    }
+
+    .back-link {
+      position: fixed;
+      top: 32px;
+      left: 32px;
+      color: var(--ink);
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 1;
+      z-index: 100;
+    }
+
+    .back-link:hover {
+      opacity: 0.7;
     }
 
     .grid {
@@ -52,6 +68,7 @@
   </style>
 </head>
 <body>
+  <a class="back-link" href="index.html">back</a>
   <h1>Photo</h1>
   <div class="grid">
     <img src="assets/long_art2601_fa25_portfolio/01-the-flood.jpg" alt="The Flood" />
