--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
       <nav class="menu-nav">
         <ul>
           <li><a href="about.html">About</a></li>
-          <li><a href="photo.html">Photo</a></li>
-          <li><a href="halftone.html">Halftone</a></li>
+          <li><a href="photo.html">Art</a></li>
+          <li><a href="portrait.html">Portrait</a></li>
+          <li><a href="halftone.html">Tools</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
