--- a/halftone.html
+++ b/halftone.html
@@ -6,8 +6,8 @@
   <title>Halftone</title>
   <style>
     :root {
-      --ink: #333a3f;
-      --paper: #fff;
+      --ink: #111111;
+      --paper: #F1F1F1;
       --back-edge-offset: 32px;
       --back-blend-source: #ccc5c0;
       --dark-bg: #07090b;
