--- a/portrait.html
+++ b/portrait.html
@@ -6,8 +6,8 @@
   <title>Portraits</title>
   <style>
     :root {
-      --ink: #333A3F;
-      --paper: #fff;
+      --ink: #151515;
+      --paper: #F1F1F1;
       --back-edge-offset: 50px;
       --back-blend-source: #CCC5C0;
     }
@@ -53,7 +53,9 @@
       width: 100%;
       height: auto;
       display: block;
-      background: #f2f2f2;
+      background: var(--paper);
+      border: 24px solid var(--paper);
+      box-shadow: 0 14px 30px rgba(0, 0, 0, 0.22);
       margin: 0 0 100px;
       break-inside: avoid;
       -webkit-column-break-inside: avoid;
@@ -74,7 +76,7 @@
 </head>
 <body>
   <a class="back-link" href="index.html">back</a>
-  <h1>Portraits</h1>
+  <h1>Portrait</h1>
   <div class="grid">
     <img src="assets/portrait/IMG_6320.jpg" alt="IMG 6320" />
     <img src="assets/portrait/IMG_6336.jpg" alt="IMG 6336" />
