--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="photo.html">Art</a></li>
           <li><a href="portrait.html">Portrait</a></li>
-          <li><a href="halftone.html">Tools</a></li>
+          <li><a href="tools.html">Tools</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
