--- a/about.html
+++ b/about.html
@@ -44,27 +44,27 @@
   <a class="back-link" href="index.html">back</a>
   <main class="bio-page">
     <h1>About</h1>
+
+    <h2></h2>
     <p>
-      This is a boilerplate bio page. Replace this paragraph with a concise personal
-      introduction that covers your background, location, and current focus.
+      I'm a Mechanical Engineering student at Cornell exploring self-expression
+      through a variety of photographic media. My personal work focuses on how modern software 
+      tools can inspire analog processes, and the creation of unsettling images in familiar spaces. 
     </p>
 
-    <h2>Bio</h2>
     <p>
-      Write 3-5 sentences about your path: how your practice started, what shaped it,
-      and what kind of work you are currently making.
+      My analog images are captured on 35mm and medium-format film, as well as directly to black and white negative photopaper. I shoot with a 
+      Minolta X-370 and Hasselblad 500C inherited from both sides of my family, as well as a Nikon F-801 and Konica Autoreflex TC that I have modified
+      and maintained extensively. 
+
+      I make silver gelatin prints through traditional B&W optical enlargement on Ilford Multigrade paper. 
+
+      Digital images are captured on Canon, Sony, and Fujifilm SLR or mirrorless systems. 
     </p>
 
-    <h2>Practice</h2>
+    <h2></h2>
     <p>
-      Describe your methods and mediums. Keep this concrete: tools, process, constraints,
-      and what themes or questions keep appearing in your projects.
-    </p>
-
-    <h2>Now</h2>
-    <p>
-      Add a short update on recent projects, upcoming work, or what you are actively
-      exploring this season.
+      Contact me for Spring 2026 senior portraits at jacklong257 (at) gmail.com.
     </p>
   </main>
 </body>
