bio, favicon updates

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     }
 
     .bio-page {
-      max-width: 760px;
+      max-width: 1000px;
       margin: 0 auto;
       padding: 140px 24px 64px;
       line-height: 1.6;
@@ -25,7 +25,7 @@
 
     .bio-page h1 {
       margin: 0 0 12px;
-      font-size: 48px;
+      font-size: 100px;
     }
 
     .bio-page h2 {
@@ -48,23 +48,27 @@
     <h2></h2>
     <p>
       I'm a Mechanical Engineering student at Cornell exploring self-expression
-      through a variety of photographic media. My personal work focuses on how modern software 
-      tools can inspire analog processes, and the creation of unsettling images in familiar spaces. 
+      through a variety of photographic media. My personal work focuses on how modern software and hardware 
+      tools can inspire and augment analog processes, and the creation of unsettling images in familiar spaces. 
     </p>
 
     <p>
       My analog images are captured on 35mm and medium-format film, as well as directly to black and white negative photopaper. I shoot with a 
       Minolta X-370 and Hasselblad 500C inherited from both sides of my family, as well as a Nikon F-801 and Konica Autoreflex TC that I have modified
-      and maintained extensively. 
+      and maintained extensively. <br><br>
 
-      I make silver gelatin prints through traditional B&W optical enlargement on Ilford Multigrade paper. 
-
-      Digital images are captured on Canon, Sony, and Fujifilm SLR or mirrorless systems. 
+      I make silver gelatin prints through traditional B&W optical enlargement on Ilford Multigrade paper. Digital images are captured on Canon, Sony, and Fujifilm SLR or mirrorless systems. 
     </p>
 
-    <h2></h2>
+    <h2>Services</h2>
     <p>
-      Contact me for Spring 2026 senior portraits at jacklong257 (at) gmail.com.
+
+      Contact me for Spring 2026 senior portraits at jacklong257 (at) gmail.com.<br>
+    
+      I'm happy to accommodate digital or analog processes as desired. 
+
+
+
     </p>
   </main>
 </body>
