--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Menu Example</title>
+  <title>Jack Long Photography</title>
+  <link rel="icon" type="image/png" href="assets/ascii-eye-fav.png" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
