restructure with dir/index instead of raw html

--- a/about/index.html
+++ b/about/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About</title>
-  <link rel="stylesheet" href="page.css" />
+  <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
+  <link rel="stylesheet" href="/page.css" />
   <style>
     body {
       display: block;
       place-items: initial;
       background-color: var(--paper);
-      background-image: url("assets/about/ascii-eye.png");
+      background-image: url("/assets/about/ascii-eye.png");
       background-size: min(320px, 40vw) auto;
       background-position: 24px 24px;
       background-repeat: no-repeat;
@@ -41,7 +42,7 @@
   </style>
 </head>
 <body>
-  <a class="back-link" href="index.html">back</a>
+  <a class="back-link" href="/">back</a>
   <main class="bio-page">
     <h1>About</h1>
 
