--- a/contact/index.html
+++ b/contact/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact</title>
-  <link rel="stylesheet" href="page.css" />
+  <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
+  <link rel="stylesheet" href="/page.css" />
 </head>
 <body>
-  <a class="back-link" href="index.html">back</a>
+  <a class="back-link" href="/">back</a>
   <h1>Contact</h1>
 </body>
 </html>
