--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jack Long Photography</title>
-  <link rel="icon" type="image/png" href="assets/ascii-eye-fav.png" />
+  <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -25,11 +25,11 @@
     <div class="menu-overlay" id="menu-overlay">
       <nav class="menu-nav">
         <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="photo.html">Art</a></li>
-          <li><a href="portrait.html">Portrait</a></li>
-          <li><a href="tools.html">Tools</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/about/">About</a></li>
+          <li><a href="/photo/">Art</a></li>
+          <li><a href="/portrait/">Portrait</a></li>
+          <li><a href="/tools/">Tools</a></li>
+          <li><a href="/contact/">Contact</a></li>
         </ul>
       </nav>
     </div>
