--- a/portrait/index.html
+++ b/portrait/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portraits</title>
+  <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
   <style>
     :root {
       --ink: #151515;
@@ -75,20 +76,20 @@
   </style>
 </head>
 <body>
-  <a class="back-link" href="index.html">back</a>
+  <a class="back-link" href="/">back</a>
   <h1>Portrait</h1>
   <div class="grid">
-    <img src="assets/portrait/IMG_6320.jpg" alt="IMG 6320" />
-    <img src="assets/portrait/IMG_6336.jpg" alt="IMG 6336" />
-    <img src="assets/portrait/IMG_6426.jpg" alt="IMG 6426" />
-    <img src="assets/portrait/IMG_6536.jpg" alt="IMG 6536" />
-    <img src="assets/portrait/IMG_6570.jpg" alt="IMG 6570" />
-    <img src="assets/portrait/IMG_6575.jpg" alt="IMG 6575" />
-    <img src="assets/portrait/IMG_6580.jpg" alt="IMG 6580" />
-    <img src="assets/portrait/gramma.jpg" alt="Gramma" />
-    <img src="assets/portrait/grampa_plane.jpg" alt="Grampa Plane" />
-    <img src="assets/portrait/jack_nonchalant.jpg" alt="Jack Nonchalant" />
-    <img src="assets/portrait/stallone.jpg" alt="Stallone" />
+    <img src="/assets/portrait/IMG_6320.jpg" alt="IMG 6320" />
+    <img src="/assets/portrait/IMG_6336.jpg" alt="IMG 6336" />
+    <img src="/assets/portrait/IMG_6426.jpg" alt="IMG 6426" />
+    <img src="/assets/portrait/IMG_6536.jpg" alt="IMG 6536" />
+    <img src="/assets/portrait/IMG_6570.jpg" alt="IMG 6570" />
+    <img src="/assets/portrait/IMG_6575.jpg" alt="IMG 6575" />
+    <img src="/assets/portrait/IMG_6580.jpg" alt="IMG 6580" />
+    <img src="/assets/portrait/gramma.jpg" alt="Gramma" />
+    <img src="/assets/portrait/grampa_plane.jpg" alt="Grampa Plane" />
+    <img src="/assets/portrait/jack_nonchalant.jpg" alt="Jack Nonchalant" />
+    <img src="/assets/portrait/stallone.jpg" alt="Stallone" />
   </div>
 </body>
 </html>
