--- a/ascii/index.html
+++ b/ascii/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ASCII</title>
+  <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
   <style>
     :root {
       --ink: #333A3F;
@@ -53,7 +54,7 @@
   </style>
 </head>
 <body>
-  <a class="back-link" href="tools.html">back</a>
+  <a class="back-link" href="/tools/">back</a>
   <main>
     <h1>ASCII</h1>
     <p>ASCII experiments page.</p>
