--- a/photo/index.html
+++ b/photo/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Photo</title>
+  <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
   <style>
     :root {
       --ink: #151515;
@@ -76,23 +77,23 @@
   </style>
 </head>
 <body>
-  <a class="back-link" href="index.html">back</a>
+  <a class="back-link" href="/">back</a>
   <h1>Art</h1>
   <div class="grid">
-    <img src="assets/long_art2601_fa25_portfolio/01-the-flood.jpg" alt="The Flood" />
-    <img src="assets/long_art2601_fa25_portfolio/02-what-we-found.jpg" alt="What We Found" />
-    <img src="assets/long_art2601_fa25_portfolio/03-the-comedian-escapes.jpg" alt="The Comedian Escapes" />
-    <img src="assets/long_art2601_fa25_portfolio/04-missed-it.jpg" alt="Missed It" />
-    <img src="assets/long_art2601_fa25_portfolio/05-where-from-here.jpg" alt="Where from Here" />
-    <img src="assets/long_art2601_fa25_portfolio/06-home-is-where-the-heart-is.jpg" alt="Home Is Where the Heart Is" />
-    <img src="assets/long_art2601_fa25_portfolio/07-evergreen.jpg" alt="Evergreen" />
-    <img src="assets/long_art2601_fa25_portfolio/08-you-got-me.jpg" alt="You Got Me" />
-    <img src="assets/long_art2601_fa25_portfolio/09-condition-one.jpg" alt="Condition One" />
-    <img src="assets/long_art2601_fa25_portfolio/10-wheres-the-rest.jpg" alt="Where's the Rest" />
-    <img src="assets/long_art2601_fa25_portfolio/11-unlikely-to-bloom.jpg" alt="Unlikely to Bloom" />
-    <img src="assets/long_art2601_fa25_portfolio/12-more-likely.jpg" alt="More Likely" />
-    <img src="assets/long_art2601_fa25_portfolio/13-nick-fuentes-eat-your-heart-out.jpg" alt="Nick Fuentes Eat Your Heart Out" />
-    <img src="assets/long_art2601_fa25_portfolio/14-into-winter.jpg" alt="Into Winter" />
+    <img src="/assets/long_art2601_fa25_portfolio/01-the-flood.jpg" alt="The Flood" />
+    <img src="/assets/long_art2601_fa25_portfolio/02-what-we-found.jpg" alt="What We Found" />
+    <img src="/assets/long_art2601_fa25_portfolio/03-the-comedian-escapes.jpg" alt="The Comedian Escapes" />
+    <img src="/assets/long_art2601_fa25_portfolio/04-missed-it.jpg" alt="Missed It" />
+    <img src="/assets/long_art2601_fa25_portfolio/05-where-from-here.jpg" alt="Where from Here" />
+    <img src="/assets/long_art2601_fa25_portfolio/06-home-is-where-the-heart-is.jpg" alt="Home Is Where the Heart Is" />
+    <img src="/assets/long_art2601_fa25_portfolio/07-evergreen.jpg" alt="Evergreen" />
+    <img src="/assets/long_art2601_fa25_portfolio/08-you-got-me.jpg" alt="You Got Me" />
+    <img src="/assets/long_art2601_fa25_portfolio/09-condition-one.jpg" alt="Condition One" />
+    <img src="/assets/long_art2601_fa25_portfolio/10-wheres-the-rest.jpg" alt="Where's the Rest" />
+    <img src="/assets/long_art2601_fa25_portfolio/11-unlikely-to-bloom.jpg" alt="Unlikely to Bloom" />
+    <img src="/assets/long_art2601_fa25_portfolio/12-more-likely.jpg" alt="More Likely" />
+    <img src="/assets/long_art2601_fa25_portfolio/13-nick-fuentes-eat-your-heart-out.jpg" alt="Nick Fuentes Eat Your Heart Out" />
+    <img src="/assets/long_art2601_fa25_portfolio/14-into-winter.jpg" alt="Into Winter" />
   </div>
 </body>
 </html>
