--- a/about/index.html
+++ b/about/index.html
@@ -5,33 +5,187 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About</title>
   <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/page.css" />
   <style>
+    :root {
+      --about-texture-opacity: 1;
+      --about-ink-overlay-opacity: 0.8;
+      --indacar-size:30vw;
+      --indacar-size-mobile: 70vw;
+      /* --pfp-layer-size: 50vw; */
+    }
+
     body {
       display: block;
       place-items: initial;
+      font-family: "DM Sans", sans-serif;
       background-color: var(--paper);
-      background-image: url("/assets/about/ascii-eye.png");
-      background-size: min(320px, 40vw) auto;
-      background-position: 24px 24px;
-      background-repeat: no-repeat;
+      color: var(--paper);
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background-image: url("/assets/index/texture2.jpeg");
+      background-position: center;
+      background-size: cover;
+      opacity: var(--about-texture-opacity);
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    body::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: var(--ink);
+      opacity: var(--about-ink-overlay-opacity);
+      pointer-events: none;
+      z-index: 1;
+    }
+
+    .about-back-link,
+    .bio-page,
+    .bio-page h1,
+    .bio-page h2,
+    .bio-page p,
+    .bio-page strong {
+      color: var(--paper);
+    }
+
+    .about-back-link {
+      position: fixed;
+      top: var(--back-edge-offset);
+      left: var(--back-edge-offset);
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 1;
+      z-index: 100;
+    }
+
+    .about-back-link:hover {
+      opacity: 0.7;
+    }
+
+    .eye-layer {
+      position: fixed;
+      top: 32px;
+      right: 32px;
+      width: 33vw;
+      aspect-ratio: 1 / 1;
+      pointer-events: none;
+      z-index: 2;
+    }
+
+    .eye-layer img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .eye-layer img:nth-child(1) {
+      transform: translate(0, 0);
+      z-index: 1;
+    }
+
+    .eye-layer img:nth-child(2) {
+      transform: translate(50px, 50px);
+      z-index: 2;
+    }
+
+    .eye-layer img:nth-child(3) {
+      transform: translate(100px, 100px);
+      z-index: 3;
+    }
+
+    .indacar-corner {
+      position: fixed;
+      left: 32px;
+      bottom: 32px;
+      width: var(--indacar-size);
+      height: auto;
+      display: block;
+      pointer-events: none;
+      z-index: 2;
+    }
+/* 
+    .pfp-layer {
+      position: fixed;
+      bottom: 32px;
+      left: 32px;
+      width: var(--pfp-layer-size);
+      aspect-ratio: 1 / 1;
+      pointer-events: none;
+      z-index: 2;
+    }
+
+    .pfp-layer img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .pfp-layer img:nth-child(1) {
+      transform: translate(0, 0);
+      z-index: 1;
+    }
+
+    .pfp-layer img:nth-child(2) {
+      transform: translate(-50px, -50px);
+      z-index: 2;
+    }
+
+    .pfp-layer img:nth-child(3) {
+      transform: translate(-100px, -100px);
+      z-index: 3;
+    } */
+
+    @media (max-width: 900px) {
+      .eye-layer {
+        width: min(480px, 70vw);
+        right: 10px;
+      }
+
+      .indacar-corner {
+        left: 10px;
+        bottom: 10px;
+        width: var(--indacar-size-mobile);
+      }
+      /* .pfp-layer {
+        left: 10px;
+      } */
     }
 
     .bio-page {
+      position: relative;
+      z-index: 3;
       max-width: 1000px;
       margin: 0 auto;
-      padding: 140px 24px 64px;
+      padding: 140px 24px 140px;
       line-height: 1.6;
     }
 
     .bio-page h1 {
       margin: 0 0 12px;
       font-size: 100px;
+      font-family: sans-serif;
     }
 
     .bio-page h2 {
       margin: 24px 0 8px;
       font-size: 24px;
+      font-family: sans-serif;
     }
 
     .bio-page p {
@@ -42,7 +196,18 @@
   </style>
 </head>
 <body>
-  <a class="back-link" href="/">back</a>
+  <div class="eye-layer" aria-hidden="true">
+    <img src="/assets/about/eye-dark-cyan.png" alt="" />
+    <img src="/assets/about/eye-dark-magenta.png" alt="" />
+    <img src="/assets/about/eye-dark-yellow.png" alt="" />
+  </div>
+  <img class="indacar-corner" src="/assets/about/indacar1.webp" alt="" aria-hidden="true" />
+  <!-- <div class="pfp-layer" aria-hidden="true">
+    <img src="/assets/about/pfp-dark-cyan.png" alt="" />
+    <img src="/assets/about/pfp-dark-magenta.png" alt="" />
+    <img src="/assets/about/pfp-dark-yellow.png" alt="" />
+  </div> -->
+  <a class="about-back-link" href="/">back</a>
   <main class="bio-page">
     <h1>About</h1>
 
@@ -64,7 +229,7 @@
     <h2>Services</h2>
     <p>
 
-      Contact me for Spring 2026 senior portraits at jacklong257 (at) gmail.com.<br>
+      Contact me for Spring 2026 senior portraits at <strong>jacklong257 (at) gmail.com</strong>.<br>
     
       I'm happy to accommodate digital or analog processes as desired. 
 
