--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
       --about-texture-opacity: 1;
       --about-ink-overlay-opacity: 0.8;
       --mobile-image-ink-opacity: 0.35;
-      --indacar-size:30vw;
+      --indacar-size:25vw;
       --indacar-size-mobile: 70vw;
       /* --pfp-layer-size: 50vw; */
     }
@@ -121,7 +121,7 @@
     .mobile-image-ink-overlay {
       position: fixed;
       inset: 0;
-      background: #111111;
+      background: var(--ink);
       opacity: var(--mobile-image-ink-opacity);
       pointer-events: none;
       z-index: 2.5;
@@ -216,7 +216,7 @@
     <img src="/assets/about/eye-dark-magenta.png" alt="" />
     <img src="/assets/about/eye-dark-yellow.png" alt="" />
   </div>
-  <img class="indacar-corner" src="/assets/about/indacar1.webp" alt="" aria-hidden="true" />
+  <img class="indacar-corner" src="/assets/about/indacar_transp.webp" alt="" aria-hidden="true" />
   <div class="mobile-image-ink-overlay" aria-hidden="true"></div>
   <!-- <div class="pfp-layer" aria-hidden="true">
     <img src="/assets/about/pfp-dark-cyan.png" alt="" />
