--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <nav class="menu-nav">
         <ul>
           <li><a href="/about/">About</a></li>
+          <li><a href="/process/">Process</a></li>
           <li><a href="/photo/">Art</a></li>
           <li><a href="/portrait/">Portrait</a></li>
           <li><a href="/tools/">Tools</a></li>
