--- a/tools/index.html
+++ b/tools/index.html
@@ -7,8 +7,8 @@
   <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
   <style>
     :root {
-      --ink: #333A3F;
-      --paper: #fff;
+      --ink: #151515;
+      --paper: #F1F1F1;
       --origin-x: 101%;
       --origin-y: 50%;
       --reveal-radius: 75vmax;
