--- a/ascii/index.html
+++ b/ascii/index.html
@@ -7,8 +7,8 @@
   <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
   <style>
     :root {
-      --ink: #333A3F;
-      --paper: #fff;
+      --ink: #151515;
+      --paper: #F1F1F1;
       --back-edge-offset: 32px;
     }
 
