--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
       --about-texture-opacity: 1;
       --about-ink-overlay-opacity: 0.8;
       --mobile-image-ink-opacity: 0.35;
-      --indacar-size:25vw;
+      --indacar-size:20vw;
       --indacar-size-mobile: 30vw;
       /* --pfp-layer-size: 50vw; */
     }
@@ -60,8 +60,8 @@
 
     .about-back-link {
       position: fixed;
-      top: var(--back-edge-offset);
-      left: var(--back-edge-offset);
+      top: 24px;
+      left: 24px;
       text-decoration: none;
       font-size: 24px;
       font-weight: 700;
@@ -75,7 +75,7 @@
 
     .eye-layer {
       position: fixed;
-      top: 32px;
+      top: 24px;
       right: 32px;
       width: 33vw;
       aspect-ratio: 1 / 1;
@@ -187,7 +187,7 @@
       z-index: 3;
       max-width: 1000px;
       margin: 0 auto;
-      padding: 88px 32px 48px;
+      padding: 50px 32px 48px 200px;
       line-height: 1.6;
     }
 
