--- a/about/index.html
+++ b/about/index.html
@@ -22,6 +22,7 @@
     body {
       display: block;
       place-items: initial;
+      position: relative;
       font-family: "DM Sans", sans-serif;
       background-color: var(--paper);
       color: var(--paper);
@@ -59,7 +60,7 @@
     }
 
     .about-back-link {
-      position: fixed;
+      position: absolute;
       top: 24px;
       left: 24px;
       text-decoration: none;
