--- a/ascii/index.html
+++ b/ascii/index.html
@@ -18,13 +18,14 @@
       display: grid;
       place-items: center;
       padding: 96px 24px 24px;
+      position: relative;
       font-family: sans-serif;
       background: var(--paper);
       color: var(--ink);
     }
 
     .back-link {
-      position: fixed;
+      position: absolute;
       top: var(--back-edge-offset);
       left: var(--back-edge-offset);
       color: var(--ink);
