--- a/halftone/index.html
+++ b/halftone/index.html
@@ -27,11 +27,12 @@
       color: var(--ink);
       background: var(--paper);
       padding: 4.5rem 0 2rem;
+      position: relative;
       isolation: isolate;
     }
 
     .back-link {
-      position: fixed;
+      position: absolute;
       top: var(--back-edge-offset);
       left: var(--back-edge-offset);
       color: var(--back-blend-source);
