--- a/photo/index.html
+++ b/photo/index.html
@@ -16,6 +16,7 @@
     body {
       margin: 0;
       padding: 88px 100px 100px;
+      position: relative;
       font-family: sans-serif;
       background: var(--paper);
       color: var(--ink);
@@ -28,7 +29,7 @@
     }
 
     .back-link {
-      position: fixed;
+      position: absolute;
       top: var(--back-edge-offset);
       left: var(--back-edge-offset);
       color: var(--back-blend-source);
