--- a/process/darkroom-printing/index.html
+++ b/process/darkroom-printing/index.html
@@ -14,13 +14,14 @@
     body {
       margin: 0;
       padding: 88px 32px 56px;
+      position: relative;
       font-family: sans-serif;
       background: var(--paper);
       color: var(--ink);
     }
 
     .back-link {
-      position: fixed;
+      position: absolute;
       top: 32px;
       left: 32px;
       color: var(--ink);
