--- a/tools/index.html
+++ b/tools/index.html
@@ -34,7 +34,7 @@
     }
 
     .back-link {
-      position: fixed;
+      position: absolute;
       top: 32px;
       left: 32px;
       color: var(--ink);
