--- a/process/index.html
+++ b/process/index.html
@@ -18,6 +18,7 @@
     body {
       margin: 0;
       padding: 88px 32px 48px;
+      position: relative;
       font-family: sans-serif;
       background: var(--paper);
       color: var(--ink);
@@ -30,7 +31,7 @@
     }
 
     .back-link {
-      position: fixed;
+      position: absolute;
       top: 32px;
       left: 32px;
       color: var(--ink);
