--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,7 @@
       --indacar-offset-bottom: -50px;
       --indacar-text-gap-right: 24px;
       --indacar-shape-margin: 30px;
+      --indacar-offset-left-mobile: 0px;
       --indacar-offset-bottom-mobile: 12px;
       --indacar-text-gap-right-mobile: 14px;
       --indacar-shape-margin-mobile: 10px;
@@ -168,6 +169,7 @@
 
       .indacar-wrap {
         width: var(--indacar-size-mobile);
+        margin-left: var(--indacar-offset-left-mobile);
         margin-right: var(--indacar-text-gap-right-mobile);
         margin-bottom: var(--indacar-offset-bottom-mobile);
         shape-margin: var(--indacar-shape-margin-mobile);
