add photomosaic sampler, remove deprecated tools

--- a/process/index.html
+++ b/process/index.html
@@ -92,6 +92,10 @@
       <img src="/assets/process/paperneg.png" alt="Paper Negative process image" />
       <h2>Paper Negative</h2>
     </a>
+    <a class="process-card" href="/assets/process/photomosaic-sampler.png">
+      <img src="/assets/process/photomosaic-sampler.png" alt="Photomosaic Sampler process image" />
+      <h2>Photomosaic Sampler</h2>
+    </a>
   </main>
 </body>
 </html>
