--- a/about/index.html
+++ b/about/index.html
@@ -190,7 +190,7 @@
 
     .bio-page h1 {
       margin: 0 0 12px;
-      font-size: 100px;
+      font-size: clamp(48px, 10vw, 100px);
       font-family: sans-serif;
     }
 
