--- a/portrait/index.html
+++ b/portrait/index.html
@@ -25,7 +25,7 @@
 
     h1 {
       margin: 0 0 24px;
-      font-size: 100px;
+      font-size: clamp(48px, 10vw, 100px);
     }
 
     .back-link {
