--- a/process/index.html
+++ b/process/index.html
@@ -9,6 +9,7 @@
     :root {
       --ink: #151515;
       --paper: #F1F1F1;
+      --select-arrow-image: url("/assets/select-arrow.webp");
     }
 
     * {
@@ -17,24 +18,40 @@
 
     body {
       margin: 0;
-      padding: 88px 32px 48px;
+      padding: 88px 100px 48px;
       position: relative;
       font-family: sans-serif;
-      background: var(--paper);
-      color: var(--ink);
+      background: var(--ink);
+      color: var(--paper);
+      isolation: isolate;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background-image: url("/assets/index/texture2.jpeg");
+      background-position: center;
+      background-size: cover;
+      opacity: 0.18;
+      pointer-events: none;
+      z-index: 0;
     }
 
     h1 {
       margin: 0 0 24px;
       font-size: clamp(48px, 8vw, 92px);
       line-height: 0.95;
+      color: var(--paper);
+      position: relative;
+      z-index: 1;
     }
 
     .back-link {
       position: absolute;
       top: 32px;
       left: 32px;
-      color: var(--ink);
+      color: var(--paper);
       text-decoration: none;
       font-size: 16px;
       font-weight: 700;
@@ -51,6 +68,8 @@
       grid-template-columns: repeat(2, minmax(0, 1fr));
       gap: 24px;
       max-width: 1100px;
+      position: relative;
+      z-index: 1;
     }
 
     .process-card {
@@ -69,8 +88,31 @@
 
     .process-card h2 {
       margin: 10px 0 0;
-      font-size: 18px;
+      font-size: clamp(18px, 8vw, 36px);
       letter-spacing: 0.02em;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .process-card h2::after {
+      content: "";
+      width: 3em;
+      height: 2em;
+      display: inline-block;
+      background-image: var(--select-arrow-image);
+      background-repeat: no-repeat;
+      background-size: contain;
+      opacity: 0;
+      transform: translateX(-30px);
+      transition: opacity 0.18s ease, transform 0.18s ease;
+    }
+
+    .process-card:hover h2::after,
+    .process-card:focus-visible h2::after,
+    .process-card:focus-within h2::after {
+      opacity: 1;
+      transform: translateX(0);
     }
 
     @media (max-width: 900px) {
